# mcfNMR

./: .gitignore  CHANGELOG  README.md  pyproject.toml  requirements.txt  requirements_tests.txt
data/BMRB/: info.txt
data/COLMAR/: COLMAR_info.txt  compound_report_N907(dp)_0.04_COLMARm_refd.txt  compound_report_N907_0.03_HSQC_refd.txt  compound_report_N926(dp)_0.04_COLMARm_refd.txt  compound_report_N926_0.03_HSQC_refd.txt
data/COLMAR/Deep Picker peak lists/: peaks_N907(dp)_refd.txt  peaks_N907(dp)_unrefd.txt  peaks_N926(dp)_refd.txt  peaks_N926(dp)_unrefd.txt
data/COLMAR/Deep Picker unreferenced for MCF/: N907(dp)_hsqc.txt  N926(dp)_hsqc.txt
data/COLMAR/Referenced MetaboMiner peak lists/: N907_hsqc.refd.txt  N926_hsqc.refd..txt
data/MetaboMiner/: MetaboMiner_hsqc.xml  info.txt
data/MetaboMiner/regions/: info.txt
data/OLDBdata/: info.txt
data/SMART-Miner/: benchmarktable.csv  info.txt  predicted_N907.txt  predicted_N926.txt
data/user_templates/: config_basic.toml  config_basic_1D.toml  lib.csv  lib_1D.csv  target.csv  target_1D.csv
mcfnmr/: __init__.py  __main__.py  config.py  main.py
mcfnmr/core/: mcf.py
mcfnmr/utils/: system.py
scripts/: activate_env.sh  download_demodata.sh  install.sh  install_dev.sh  reinstall_distro.sh  run_formatter.sh  run_tests.sh  version_update.py
tests/: config.mcfnmr  options.mcfnmr  run_tests.py  testsuite.mcfnmr
tests/aggregate_runs/: testsuite.mcfnmr
tests/classification/: testsuite.mcfnmr
tests/misc/: testsuite.mcfnmr
tests/quantification/: testsuite.mcfnmr
tests/user_interface/: testsuite.mcfnmr
(+273 files in other folders)
